<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?attr/dividerHorizontal"
            android:dividerPadding="5dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/user_pic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/profile"
                        android:transitionName="@string/profileImage"
                        tools:targetApi="lollipop" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:transitionName="@string/senderName"
                                android:id="@+id/user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Fredrick Ochieng"
                                android:textColor="@color/colorPrimaryDark"
                                tools:targetApi="lollipop" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_play_arrow_grey_600_18dp" />

                            <TextView
                                android:transitionName="@string/senderTitle"
                                android:id="@+id/user_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Student"
                                android:textColor="@color/secondary_text_default_material_light"
                                android:textSize="@dimen/abc_text_size_caption_material"
                                tools:targetApi="lollipop" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/post_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:paddingBottom="3dp"
                            android:text="Date Time"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:transitionName="@string/dateTime"
                            tools:targetApi="lollipop" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/post_image_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/post_image"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:adjustViewBounds="true"
                            android:background="#D3D3D3"
                            android:foregroundGravity="center"
                            android:scaleType="centerCrop"
                            android:transitionName="@string/postImage"
                            tools:targetApi="lollipop" />

                        <LinearLayout
                            android:id="@+id/error_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/no_image"
                                android:visibility="visible" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-thin"
                                android:text="@string/load_error"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/loading_progressBar"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" />

                    </RelativeLayout>

                    <TextView
                        android:paddingLeft="6dp"
                        android:paddingRight="5dp"
                        android:id="@+id/post_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="Title come here"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="@dimen/abc_text_size_subhead_material"
                        android:transitionName="@string/postTitle"
                        tools:ignore="PrivateResource"
                        tools:targetApi="lollipop" />

                    <TextView
                        android:paddingLeft="6dp"
                        android:paddingRight="5dp"
                        android:id="@+id/post_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Details come here"
                        android:textColor="@color/secondary_text_default_material_light"
                        android:textSize="14sp"
                        android:transitionName="@string/postContent"
                        tools:ignore="PrivateResource"
                        tools:targetApi="lollipop" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>